--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,52 @@
-__pycache__
-*.json
-*.html
-BoPhapDienDienTu
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Node.js / Frontend
+node_modules/
+frontend/node_modules/
+frontend/dist/
+frontend/build/
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment Variables
+.env
+backend/.env
+
+# Logs
 *.log
-# .venv
+logs/
+
+# Data / Generated Files
+BoPhapDienDienTu/
+BoPhapDienDienTu.zip
+crawled_docs/
+phap_dien/
+chroma_db/
+qdrant_storage/
+
+# IDEs / Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Docker
+docker-compose.override.yml
