--- a/langchain-backend/requirements.txt
+++ b/langchain-backend/requirements.txt
@@ -1,19 +1,126 @@
-# FastAPI and server
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-
-# LangChain ecosystem
-langchain>=0.3.0
-langchain-core>=0.3.0
-langchain-huggingface>=0.1.0
-langchain-google-genai>=2.0.0
-
-# Vector store and embeddings
-qdrant-client>=1.7.0
-fastembed>=0.3.0
-sentence-transformers>=2.2.0
-
-# Utilities
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-torch>=2.0.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+coloredlogs==15.0.1
+distro==1.9.0
+dnspython==2.8.0
+email-validator==2.3.0
+exceptiongroup==1.3.1
+fastapi==0.128.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.9.0
+fastar==0.8.0
+fastembed==0.7.4
+filelock==3.20.3
+filetype==1.2.0
+flatbuffers==25.12.19
+fsspec==2026.1.0
+google-auth==2.47.0
+google-genai==1.57.0
+grpcio==1.76.0
+h11==0.16.0
+h2==4.3.0
+hf-xet==1.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+huggingface-hub==0.36.0
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==1.2.3
+langchain-core==1.2.7
+langchain-google-genai==4.1.3
+langchain-huggingface==1.2.0
+langchain-qdrant==1.1.0
+langgraph==1.0.5
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.3.2
+langsmith==0.6.2
+loguru==0.7.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
+onnxruntime==1.23.2
+orjson==3.11.5
+ormsgpack==1.12.1
+packaging==25.0
+pillow==11.3.0
+portalocker==3.2.0
+protobuf==6.33.3
+py_rust_stemmers==0.1.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+python-dotenv==1.2.1
+python-multipart==0.0.21
+PyYAML==6.0.3
+qdrant-client==1.16.2
+regex==2025.11.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.2.0
+rich-toolkit==0.17.1
+rignore==0.7.6
+rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+sentence-transformers==5.2.0
+sentencepiece==0.2.1
+sentry-sdk==2.49.0
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.50.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+tomli==2.4.0
+torch==2.9.1
+tqdm==4.67.1
+transformers==4.57.3
+triton==3.5.1
+typer==0.21.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uuid_utils==0.13.0
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+xxhash==3.6.0
+zstandard==0.25.0
